--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-autoprefixer": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-cli": "^2.3.0",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "sass": "^1.57.1"
@@ -29,5 +30,8 @@
   "browserslist": [
     "defaults and supports es6-module",
     "maintained node versions"
-  ]
+  ],
+  "dependencies": {
+    "gulp-imagemin": "^7.1.0"
+  }
 }
